[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[project]
name = "agentix-cli"
version = "0.1.0"
description = "A CLI tool for [description TBD]"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Christian Sagstetter", email = "christian.sagstetter@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.scripts]
agentix = "agentix.__main__:main"

[project.urls]
Homepage = "https://github.com/saggl/agentix"
Repository = "https://github.com/saggl/agentix.git"
Issues = "https://github.com/saggl/agentix/issues"
