[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "ruff>=0.4",
]

[project]
name = "agentix-cli"
version = "0.4.0"
description = "Unified CLI and SDK for Jira, Confluence, Jenkins, Bitbucket, and Polarion"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Christian Sagstetter", email = "christian.sagstetter@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "tomli>=1.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "tabulate>=0.9",
    "packaging>=21.0",
    "polarion-api>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
agentix = "agentix.__main__:main"

[project.urls]
Homepage = "https://github.com/saggl/agentix"
Repository = "https://github.com/saggl/agentix.git"
Issues = "https://github.com/saggl/agentix/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentix"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "agentix.jira.client_methods",
    "agentix.jenkins.client_methods",
    "agentix.confluence.client_methods",
    "agentix.bitbucket.client_methods",
]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = ["polarion.*", "zeep.*"]
ignore_missing_imports = true
